Fixed bottom spacing on image.

--- a/style.less
+++ b/style.less
@@ -393,7 +393,7 @@ header#masthead {
 			max-width: 100%;
 
 			img {
-				display: block;
+				vertical-align:bottom;
 			}
 		}
 
